test/fails/bad_generics/core5.lgl
// Note that 't' and 'u' MUST be vecs, regardless if we explicitely require it or not!
`u app_mat<`t, `u>(`t->`u m, t x) {
    return m * x;
}

void main() {
    vec3 fail = app_mat<vec2, vec3>([[1., 2.], [2., 1.]], [1., 2]); // Maps must be checked correctly
}